--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
-  "name": "filecompressor",
+  "name": "filecompressu",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
     "start": "nodemon electron . --disable-gpu",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css --watch"
+  },
+  "build": {
+    "appId": "com.slavdev.filecompresSU",
+    "productName": "FileCompresSU",
+    "Files": [
+      "**/**"
+    ],
+    "directories": {
+      "buildResources": "build"
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "SlavDev",
+        "repo": "filecompressu"
+      }
+    ]
   },
   "keywords": [],
   "author": "",
@@ -14,6 +33,7 @@
     "@tailwindcss/cli": "^4.1.5",
     "autoprefixer": "^10.4.21",
     "electron": "^36.1.0",
+    "electron-builder": "^26.0.12",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
@@ -21,6 +41,7 @@
   },
   "dependencies": {
     "archiver": "^7.0.1",
+    "electron-updater": "^6.6.2",
     "imagemin": "^9.0.1",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-mozjpeg": "^10.0.0",
