--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon electron . --disable-gpu",
+    "start": "electron .",
+    "dev": "nodemon --watch . --exec \"electron .\"",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css --watch"
@@ -41,7 +42,7 @@
     "@tailwindcss/cli": "^4.1.5",
     "autoprefixer": "^10.4.21",
     "electron": "^36.1.0",
-    "electron-builder": "^26.0.12",
+    "electron-builder": "^25.1.8",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
