--- a/app/package.json
+++ b/app/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "nodemon electron . --disable-gpu",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder",
-    "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css --watch"
+    "dist": "npm run build:css:prod && electron-builder",
+    "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css --watch",
+    "build:css:prod": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css --minify"
   },
   "build": {
     "appId": "com.slavdev.filecompresSU",
@@ -54,7 +55,7 @@
     "electron-builder": "^26.0.12",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5.8.3"
   },
   "dependencies": {
