--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -60,8 +60,8 @@
     // "noEmit": true,                                   /* Disable emitting files from a compilation. */
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
     /* Output options */
-    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
-    "rootDir": "./src" /* Specify the root directory of input files. */,
+    "outDir": "./dist/logic" /* Specify an output folder for all emitted files. */,
+    "rootDir": "./src/logic" /* Specify the root directory of input files. */,
     // "removeComments": true,                           /* Disable emitting comments. */
     // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
     // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
