Change .gitignore references

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 .vscode/
 dist/
+dist/node_modules
+app/node_modules
+app/release-builds/
 *.asar
-build/
-node_modules/
 *.env
 *.log
 *.snap
-*.yml
 *.tsbuildinfo
 LICENSE
-README.md
-app/release-builds/
-dist/node_modules/
-.github/
