'./app/dist/' -> './dist/'

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,5 @@ jobs:
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: electron-market-build
-          path: ./app/dist/
+          name: filecompressor-build
+          path: ./dist/
