--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,41 @@
-.vscode/
-dist/
+# GitHub files
+LICENSE
+
+# TypeScript files
+*.tsbuildinfo
+*.d.ts
+
+# Node modules
 dist/node_modules/
 app/node_modules/
-# Build artifacts
+
+# Build outputs
+dist/
+release-builds/
 app/release-builds/
+
+# macOS
+.DS_Store
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Temporary files
 *.asar
-*.env
-*.log
 *.snap
-*.tsbuildinfo
-LICENSE
+
+# Environment files
+*.env
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Package files
+*.tgz
+*.tar.gz
