Fix exports is not defined && Other issues

--- a/app/package.json
+++ b/app/package.json
@@ -14,16 +14,18 @@
     "pack": "electron-builder --dir",
     "dist": "npm run build && electron-builder --publish never",
     "make-dist": "npm run build && npm run dist",
-    "build": "npm run clean && npm run build:ts && npm run build:css:prod && npm run copy:assets && npm run copy:files && npm run copy:utils && npm run copy:configs && npm run copy:icons && npm run copy:package",
+    "build": "npm run clean && npm run build:ts && echo '\nContents of ../dist after tsc:' && ls -R ../dist && npm run build:css && npm run copy:assets && npm run copy:files && npm run copy:utils && npm run copy:configs && npm run copy:icons && npm run copy:package && npm run verify-build",
+    "verify-build": "node verify-build.js",
     "build:run": "npm run build && npm run start:prod",
-    "build:ts": "tsc src/logic/preload.ts --outDir ../dist/src/logic && tsc src/logic/renderer.ts --outDir ../dist/src/logic && tsc src/logic/utils/compression.ts --outDir ../dist/src/logic/utils",
-    "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ../dist/src/styles.css --watch",
+    "build:ts": "mkdir -p ../dist && mkdir -p ../dist/src/logic/utils && tsc -p . --noEmitOnError false --listEmittedFiles --diagnostics",
+    "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ../dist/src/styles.css",
+    "build:css:dev": "tailwindcss -i ./src/styles/tailwind.css -o ../dist/src/styles.css --watch",
     "build:css:prod": "tailwindcss -i ./src/styles/tailwind.css -o ../dist/src/styles.css --minify",
-    "copy:assets": "mkdir -p ../dist/src/images && cp -r src/images/* ../dist/src/images/",
-    "copy:files": "cp index.html ../dist/ && cp main.js ../dist/",
-    "copy:utils": "mkdir -p ../dist/src/logic/utils && cp -r src/logic/utils/*.js ../dist/src/logic/utils/",
-    "copy:configs": "cp tailwind.config.js postcss.config.js tsconfig.json ../dist/ || true",
-    "copy:icons": "mkdir -p ../dist/build && cp -r build/* ../dist/build/",
+    "copy:assets": "cpx \"src/images/**/*\" ../dist/src/images",
+    "copy:files": "cpx \"{index.html,main.js}\" ../dist/",
+    "copy:utils": "cpx \"src/logic/utils/*.js\" ../dist/src/logic/utils/",
+    "copy:configs": "cpx \"{tailwind.config.js,postcss.config.js,tsconfig.json}\" ../dist/ || true",
+    "copy:icons": "cpx \"build/**/*\" ../dist/build/",
     "copy:package": "cp package.json ../dist/ && cd ../dist && npm install --production",
     "clean": "rimraf ../dist",
     "build:linux": "npm run build && cd ../dist && electron-builder --linux --x64 --publish never",
@@ -76,6 +78,7 @@
   "devDependencies": {
     "@tailwindcss/cli": "4.1.5",
     "autoprefixer": "10.4.21",
+    "cpx": "^1.5.0",
     "electron": "^36.3.1",
     "electron-builder": "26.0.15",
     "nodemon": "3.1.10",
