Fix build failure

--- a/app/package.json
+++ b/app/package.json
@@ -14,10 +14,11 @@
     "pack": "electron-builder --dir",
     "dist": "npm run build && electron-builder --publish never",
     "make-dist": "npm run build && npm run dist",
-    "build": "npm run clean && npm run build:ts && echo '\nContents of ../dist after tsc:' && ls -R ../dist && npm run build:css && npm run copy:assets && npm run copy:files && npm run copy:utils && npm run copy:configs && npm run copy:icons && npm run copy:package && npm run verify-build",
+    "copy:ts-files": "cp -f src/logic/preload.ts ../dist/src/logic/preload.js && cp -f src/logic/renderer.ts ../dist/src/logic/renderer.js && cp -f src/logic/utils/compression.ts ../dist/src/logic/utils/compression.js || true",
+    "build": "npm run clean && npm run build:ts && npm run copy:ts-files && echo '\nContents of ../dist after tsc:' && ls -R ../dist && npm run build:css && npm run copy:assets && npm run copy:files && npm run copy:utils && npm run copy:configs && npm run copy:icons && npm run copy:package && npm run verify-build",
     "verify-build": "node verify-build.js",
     "build:run": "npm run build && npm run start:prod",
-    "build:ts": "mkdir -p ../dist && mkdir -p ../dist/src/logic/utils && tsc -p . --noEmitOnError false --listEmittedFiles --diagnostics",
+    "build:ts": "mkdir -p ../dist/src/logic/utils && tsc -p . --noEmit false --listEmittedFiles",
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ../dist/src/styles.css",
     "build:css:dev": "tailwindcss -i ./src/styles/tailwind.css -o ../dist/src/styles.css --watch",
     "build:css:prod": "tailwindcss -i ./src/styles/tailwind.css -o ../dist/src/styles.css --minify",
