--- a/app/package.json
+++ b/app/package.json
@@ -14,11 +14,11 @@
     "pack": "electron-builder --dir",
     "dist": "npm run build && electron-builder --publish never",
     "make-dist": "npm run build && npm run dist",
-    "copy:ts-files": "cp -f src/logic/preload.ts ../dist/src/logic/preload.js && cp -f src/logic/renderer.ts ../dist/src/logic/renderer.js && cp -f src/logic/utils/compression.ts ../dist/src/logic/utils/compression.js || true",
+    "copy:ts-files": "echo 'TypeScript compilation handled by tsc'",
     "build": "npm run clean && npm run build:ts && npm run copy:ts-files && echo '\nContents of ../dist after tsc:' && ls -R ../dist && npm run build:css && npm run copy:assets && npm run copy:files && npm run copy:utils && npm run copy:configs && npm run copy:icons && npm run copy:package && npm run verify-build",
     "verify-build": "node verify-build.js",
     "build:run": "npm run build && npm run start:prod",
-    "build:ts": "mkdir -p ../dist/src/logic/utils && tsc -p . --noEmit false --listEmittedFiles",
+    "build:ts": "mkdir -p ../dist/src/logic/utils && npx tsc --project tsconfig.json",
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ../dist/src/styles.css",
     "build:css:dev": "tailwindcss -i ./src/styles/tailwind.css -o ../dist/src/styles.css --watch",
     "build:css:prod": "tailwindcss -i ./src/styles/tailwind.css -o ../dist/src/styles.css --minify",
@@ -80,7 +80,7 @@
     "@tailwindcss/cli": "4.1.5",
     "autoprefixer": "10.4.21",
     "cpx": "^1.5.0",
-    "electron": "^36.3.1",
+    "electron": "36.3.1",
     "electron-builder": "26.0.15",
     "nodemon": "3.1.10",
     "postcss": "8.5.3",
