Fix 'notifier' not defined

--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,9 @@
   "build": {
     "appId": "com.slavdev.filecompresSU",
     "productName": "FileCompresSU",
+    "files": [
+      "dist/**/*"
+    ],
     "win": {
       "target": [
         "nsis",
