Restructures project for cleaner build process
Moved node_modules and other scripts to work from root instead of app.

--- a/app/package.json
+++ b/app/package.json
@@ -6,12 +6,12 @@
     "email": "slavdevinc@gmail.com"
   },
   "homepage": "https://github.com/wildREA/fileCompresSU",
-  "main": "main.js",
+  "main": "../dist/main.js",
   "type": "module",
   "scripts": {
     "start": "nodemon electron . --disable-gpu",
     "start:prod": "electron ../dist",
-    "pack": "electron-builder --dir",
+    "pack": "electron-builder",
     "dist": "npm run build && electron-builder --publish never",
     "make-dist": "npm run build && npm run dist",
     "copy:ts-files": "echo 'TypeScript compilation handled by tsc'",
@@ -27,47 +27,10 @@
     "copy:utils": "cpx \"src/logic/utils/*.js\" ../dist/src/logic/utils/",
     "copy:configs": "cpx \"{tailwind.config.js,postcss.config.js,tsconfig.json}\" ../dist/ || true",
     "copy:icons": "cpx \"build/**/*\" ../dist/build/",
-    "copy:package": "cp package.json ../dist/ && cd ../dist && npm install --production",
     "clean": "rimraf ../dist",
-    "build:linux": "npm run build && cd ../dist && electron-builder --linux --x64 --publish never",
-    "build:linux-arm64": "npm run build && cd ../dist && electron-builder --linux --arm64 --publish never",
-    "build:mac": "npm run build && cd ../dist && electron-builder --mac --x64 --publish never",
-    "build:win": "npm run build && cd ../dist && electron-builder --win --x64 --publish never",
-    "build:all": "npm run build && cd ../dist && electron-builder --linux --mac --win --x64 --arm64 --publish never"
-  },
-  "build": {
-    "appId": "com.slavdev.filecompresSU",
-    "productName": "FileCompresSU",
-    "files": [
-      "dist/**/*"
-    ],
-    "win": {
-      "target": [
-        "nsis",
-        "portable"
-      ],
-      "icon": "build/icon.ico",
-      "artifactName": "${productName}-${version}-win.${ext}"
-    },
-    "linux": {
-      "target": [
-        "AppImage",
-        "deb"
-      ],
-      "icon": "build/icon.png",
-      "artifactName": "${productName}-${version}-linux-${arch}.${ext}"
-    },
-    "directories": {
-      "output": "../release-builds",
-      "buildResources": "build"
-    },
-    "publish": [
-      {
-        "provider": "github",
-        "owner": "SlavDev",
-        "repo": "filecompressu"
-      }
-    ]
+    "dist": "npm run build && cd .. && npm run dist",
+    "dist:linux": "npm run build && cd .. && npm run dist",
+    "dist:win": "npm run build && cd .. && npm run dist"
   },
   "keywords": [
     "file",
@@ -78,29 +41,5 @@
     "utility"
   ],
   "license": "ISC",
-  "description": "A modern file compression application for images, PDFs, and text files",
-  "devDependencies": {
-    "@tailwindcss/cli": "4.1.5",
-    "autoprefixer": "10.4.21",
-    "cpx": "^1.5.0",
-    "electron": "36.3.1",
-    "electron-builder": "26.0.15",
-    "nodemon": "3.1.10",
-    "postcss": "8.5.3",
-    "rimraf": "6.0.1",
-    "tailwindcss": "4.1.7",
-    "typescript": "5.8.3"
-  },
-  "dependencies": {
-    "archiver": "7.0.1",
-    "electron-updater": "6.6.2",
-    "imagemin": "9.0.1",
-    "imagemin-gifsicle": "7.0.0",
-    "imagemin-mozjpeg": "10.0.0",
-    "imagemin-pngquant": "10.0.0",
-    "imagemin-svgo": "11.0.1",
-    "pdf-lib": "1.17.1",
-    "pdfjs-dist": "5.2.133",
-    "sharp": "0.34.2"
-  }
+  "description": "A modern file compression application for images, PDFs, and text files"
 }
